More settings applied
Details:
 - REST_FRAMEWORK confs: Default permission class changed and pagination configured.
 - SIMPLE_JWT: Signing key configured and access/refresh tokens' lifetime set.
 - Env file examples: `SIGNING_KEY` added.
 - Env file examples: `ACCESS_TOKEN_LIFETIME_MINUTES` added.
 - Env file examples: `REFRESH_TOKEN_LIFETIME_MINUTES` added.

--- a/prod.env.example
+++ b/prod.env.example
@@ -1,6 +1,10 @@
 DEBUG=False
 SECRET_KEY=A_VERY_SECRET_KEY
+SIGNING_KEY=ANOTHER_VERY_SECRET_KEY
 ALLOWED_HOSTS=api.myresume.whatever
 DATABASE_URL=postgres://{USER}:{PASSWORD}@{HOST}:5432/resume
 DATABASE_CONN_MAX_AGE=600
 CORS_ALLOWED_ORIGINS=https://myresume.whatever
+
+ACCESS_TOKEN_LIFETIME_MINUTES="1440"   # 1 day
+REFRESH_TOKEN_LIFETIME_MINUTES="43200" # 1 month
