--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 DEBUG=True
 SECRET_KEY=A_VERY_SECRET_KEY
+SIGNING_KEY=ANOTHER_VERY_SECRET_KEY
 ALLOWED_HOSTS=localhost, 127.0.0.1
 DATABASE_URL=postgres://{USER}:{PASSWORD}@{HOST}:5432/resume
 DATABASE_CONN_MAX_AGE=600
 CORS_ALLOWED_ORIGINS=http://lcoalhost:3000, http://127.0.0.1:3000
+
+ACCESS_TOKEN_LIFETIME_MINUTES="1440"   # 1 day
+REFRESH_TOKEN_LIFETIME_MINUTES="43200" # 1 month
