--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ drf-spectacular = "^0.27.1"
 dj-database-url = "^2.1.0"
 gunicorn = "^21.2.0"
 python-decouple = "^3.8"
-psycopg = { extras = ["binary"], version = "^3.1.18" }
+psycopg = { version = "3.1.17", extras = ["binary"] }
 
 
 [tool.poetry.group.dev.dependencies]
