--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -8,6 +8,12 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
 
+        strategy:
+            matrix:
+                node-version: ["18"]
+                python-version: ["3.11"]
+                poetry-version: ["1.6.1"]
+
         steps:
             - name: Checkout
               uses: actions/checkout@v3
@@ -15,7 +21,17 @@ jobs:
             - name: Install node
               uses: actions/setup-node@v3
               with:
-                  node-version: "18"
+                  node-version: ${{matrix.node-version}}
+
+            - name: Install python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: ${{matrix.python-version}}
+
+            - name: Install poetry
+              uses: abatilo/actions-poetry@v2
+              with:
+                  poetry-version: ${{matrix.poetry-version}}
 
             - name: Install @liara/cli
               run: npm i -g @liara/cli@5
